@@ -92,10 +92,13 @@ use IkiWiki::Setup::Standard {
 		#},
 	],
 
-	# Generate rss feeds for blogs?
-	rss => 1,
-	# Generate atom feeds for blogs?
-	atom => 1,
+	# Default to generating rss feeds for blogs?
+	#rss => 1,
+	# Default to generating atom feeds for blogs?
+	#atom => 1,
+	# Allow generating feeds even if not generated by default?
+	#allowrss => 1,
+	#allowatom => 1,
 	# Urls to ping with XML-RPC when rss feeds are updated
 	#pingurl => [qw{http://rpc.technorati.com/rpc/ping}],
 	# Include discussion links on all pages?
